[workspace]
members = ["crates/helpers", "crates/radix-themes"]
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
anyhow = "1"
log = "0.4"
serde = "1.0.203"
serde_json = "1"
rust-embed = "8"
helpers = { path = "crates/helpers" }
radix-themes = { path = "crates/radix-themes" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
