[workspace]
members = [
    "crates/css",
    "crates/interactivity",
    "crates/nes-css",
    "crates/radix-colors",
    "crates/radix-themes",
    "crates/theme",
]
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/phungleson/gpui.git" }
anyhow = "1"
log = "0.4"
serde = "1.0.203"
serde_json = "1"
rust-embed = "8"
smallvec = "1"
regex = "1"
once_cell = "1"
gpux-css = { path = "crates/css" }
gpux-interactivity = { path = "crates/interactivity" }
gpux-radix-colors = { path = "crates/radix-colors" }
gpux-radix-themes = { path = "crates/radix-themes" }
gpux-theme = { path = "crates/theme" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
