[package]
name = "gpux-nes-css"
description = "GPUX NES.css components"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui.workspace = true
smallvec.workspace = true
anyhow.workspace = true
gpux-css.workspace = true
gpux-interactivity.workspace = true

[lints]
workspace = true

[[example]]
name = "logos"
path = "examples/logos.rs"
