[package]
name = "gpux-nes-css"
description = "GPUX NES.css components"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui.workspace = true
smallvec.workspace = true
anyhow.workspace = true
once_cell.workspace = true
gpux-css.workspace = true
gpux-interactivity.workspace = true
regex.workspace = true
rust-embed.workspace = true

[lints]
workspace = true