[package]
name = "gpux-radix-colors"
description = "GPUX Radix Colors"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui.workspace = true
gpux-css.workspace = true
gpux-theme.workspace = true
anyhow.workspace = true

[lints]
workspace = true

[[example]]
name = "main"
path = "examples/main.rs"
