[package]
name = "radix-themes"
description = "GPUX Radix Themes components"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
helpers.workspace = true
rust-embed.workspace = true

[lints]
workspace = true

[[example]]
name = "checkbox"
path = "examples/checkbox.rs"
