[package]
name = "gpux-radix-themes"
description = "GPUX Radix Themes components"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
gpux-radix-colors.workspace = true
gpux-css.workspace = true
gpux-theme.workspace = true
gpux-interactivity.workspace = true
rust-embed.workspace = true
once_cell.workspace = true
smallvec.workspace = true

[lints]
workspace = true

[[example]]
name = "checkbox"

[[example]]
name = "text"
